--- a/style.css
+++ b/style.css
@@ -47,13 +47,18 @@ table {
 }
 /* end reset */
 
+:root {
+  --dark-gray: #585756;
+  --highlight: #a8d2c9;
+  --white: #fff;
+}
 body {
-	background: #FFF;
-  color: #222;
+	background: var(--white);
+  color: var(--dark-gray);
   font-size: 16px;
   line-height: 1.2;
-  font-family: 'Roboto', sans-serif;
-  font-weight: lighter;
+  font-family: "Josefin Slab", serif;
+  font-weight: 400;
 }
 .page-wrapper {
 	width: 100%;
@@ -67,26 +72,25 @@ body {
   margin-bottom: 20px;
 }
 h1, h2, h3 {
-	font-family: 'Open Sans', sans-serif;
-  color: #222;
+	font-family: 'Oxygen', sans-serif;
 	text-decoration: none;
+  letter-spacing: .02em;
 }
 h1 {
   font-size: 40px;
   font-size: 2.5rem;
-  margin-bottom: 40px;
+  margin-bottom: 1em;
 }
 h1 > span {
   display: block;
 }
 h1 span.head-name {
-  padding-bottom: 20px;
-  border-bottom: 1px solid #A4A4A4;
+  text-transform: uppercase;
+  color: var(--highlight);
+  padding-bottom: .5em;
+  border-bottom: 1px solid var(--dark-gray);
 }
 h1 span.head-description {
-  font-family: 'Roboto', sans-serif;
-  font-weight: normal;
-  color: #6f6f6f;
   font-size: 24px;
   font-size: 1.5rem;
   padding-top: 20px;
@@ -105,12 +109,12 @@ p:last-child {
 }
 p a,
 p a:visited {
-  color: #0050B9;
+  color: var(--dark-gray);
 }
 a.resume-link {
   position: relative;
   text-decoration: none;
-  border-bottom: 1px solid #0050B9;
+  border-bottom: 1px solid var(--dark-gray);
 }
 a.resume-link::after {
  content: url(images/open_in_new_blue.svg);
@@ -120,8 +124,8 @@ a.resume-link::after {
 p a:focus, 
 p a:active,
 p a:hover {
-  color: #6f6f6f;
-  border-bottom: 1px solid #6f6f6f;
+  color: var(--highlight);
+  border-bottom: 1px solid var(--dark-gray);
 }
 a.resume-link:focus:after,
 a.resume-link:active:after,
@@ -147,7 +151,7 @@ a.resume-link:hover:after {
 .contact-buttons a:hover {
   opacity: 0.8;
   padding-bottom: 2px;
-  border-bottom: 2px solid #6f6f6f;
+  border-bottom: 2px solid var(--dark-gray);
 }
 .contact-buttons a:last-child {
   margin-right: 0;
@@ -179,10 +183,10 @@ img.tiger-pic {
       justify-content: center;
     }
     .page-header {
-      border-right: 1px solid #A4A4A4;
+      border-right: 1px solid var(--dark-gray);
       padding-right: 0;
       margin:  0;
-      flex: 1 0 35%;
+      flex: 1 0 40%;
       text-align: right;
     }
     h1 {
